@@ -337,3 +337,14 @@ th {
     25% { transform: translateX(-5px); }
     75% { transform: translateX(5px); }
 }
+
+/* Stile per pulsante elimina riga quando disabilitato per modalità bypass */
+button.disabled-bypass {
+    background: #999 !important;
+    opacity: 0.6;
+    cursor: not-allowed !important;
+}
+
+button.disabled-bypass:hover {
+    background: #999 !important;
+}
