@@ -1,5 +1,6 @@
 Version 1.1.0
 - added unlock rule button
+- added delete row button
 
 Version 1.0.11
 - fix sql scripts
